# contextpatch

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/cli/src/commands/: apply_patch.rs  diff_preview.rs  mod.rs  read_range.rs  status.rs  write_new_file.rs
crates/cli/tests/: stage1_cli.rs
crates/contextpatch-cli/: Cargo.toml
crates/contextpatch-cli/src/: args.rs  main.rs
crates/contextpatch-cli/src/commands/: diff_preview.rs  mod.rs  read_range.rs  replace_exact.rs
crates/contextpatch-core/: Cargo.toml
crates/contextpatch-core/src/: error.rs  lib.rs
crates/contextpatch-core/src/fs/: atomic_write.rs  mod.rs  read_range.rs
crates/contextpatch-core/src/patch/: diff.rs
crates/contextpatch-core/src/policy/: guard.rs
crates/contextpatch-core/src/replace/: anchor.rs  exact.rs
crates/contextpatch-server/: Cargo.toml
crates/contextpatch-server/src/: main.rs
crates/contextpatch-server/src/protocol/: tools.rs
crates/contextpatch-server/src/tools/: apply_patch.rs  diff_preview.rs  mod.rs  read_range.rs  status_guard.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/fs/: atomic_write.rs  mod.rs  path.rs  write_new_file.rs
crates/core/src/git/: mod.rs  status.rs  tracked_move.rs
crates/core/src/patch/: apply.rs  diff.rs
crates/core/src/process/: guarded_command.rs  mod.rs
crates/core/src/replace/: exact.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/protocol/: schema.rs
crates/server/src/tools/: capability_manifest.rs  git_commit_exact.rs  git_push_exact.rs  git_remote_check.rs  mod.rs  preflight_health.rs  read_command_log.rs  replace_exact.rs  run_guarded_command.rs  validation_profile_run.rs  write_new_file.rs
crates/server/tests/: stage1_mcp.rs
docs/: architecture.md  claude-desktop.md  implementation-roadmap.md  safety-contract.md  tool-spec.md
src/: main.rs
