[workspace]
members = [
    "crates/contextpatch-core",
    "crates/contextpatch-cli",
    "crates/contextpatch-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/david3xu/contextpatch"
readme = "README.md"
keywords = ["patch", "agent", "context", "atomic", "git"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
contextpatch-core = { path = "crates/contextpatch-core" }
