[package]
name = "core"
description = "Core guarded edit engine for contextpatch."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lib]
name = "contextpatch_core"
path = "src/lib.rs"
